--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="./output.js"></script>
     {{!-- <title>{{htmlWebpackPlugin.options.title}}</title> --}}
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
